Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13281

[C++][Gandiva] Error on timestampDiffMonth function behavior for negative diff values

    XMLWordPrintableJSON

Details

    Description

      The TIMESTAMPDIFF function appears to return incorrect values when a negative number should be returned.

      Example:

      • For the inputs TIMESTAMPDIFFMONTH("2019-06-30", "2019-03-31") it should return -3, but it returns -1
      • For the inputs TIMESTAMPDIFFMONTH("2019-06-30", "2019-05-31") it should return -1, but it returns 1

      Attachments

        Issue Links

          Activity

            People

              jpedroantunes João Pedro Antunes Ferreira
              jpedroantunes João Pedro Antunes Ferreira
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 0.5h
                  0.5h