ARROW-13281: [C++][Gandiva] Correct error on timestampDiffMonth function

The TIMESTAMPDIFF function appears to return incorrect values when a negative number should be returned.

Example:
- For the inputs TIMESTAMPDIFFMONTH("2019-06-30", "2019-03-31") it should return **-3**, but it actually returns **-1**
- For the inputs TIMESTAMPDIFFMONTH("2019-06-30", "2019-05-31") it should return **-1**, but it actually returns **1**

Closes #10674 from jpedroantunes/bugfix/timestamp-diff-month and squashes the following commits:

576be4dbf <João Pedro> Change add order on timestamp diff function
77aa72a8d <João Pedro> Fix bug on timestampdiff month function and add unit tests

Authored-by: João Pedro <joaop@simbioseventures.com>
Signed-off-by: Praveen <praveen@dremio.com>